--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-@import url(./animacao.css);
 
 
 
@@ -9,7 +8,7 @@
 body{
 	font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 	font-size: 14px;
-	background: #04324c;
+	background: #4582a6;
 }
 
 header{
@@ -136,4 +135,9 @@ button[disabled=disabled], button:disabled {
 
 .campo-invalido{
 	border: 1px solid red;
+}
+
+.paciente-invalido{
+background-color: lightcoral;
+font-weight: bold;
 }
