--- a/css/index.css
+++ b/css/index.css
@@ -141,3 +141,11 @@ button[disabled=disabled], button:disabled {
 background-color: lightcoral;
 font-weight: bold;
 }
+
+#mensagem-erro{
+	font-size: 16px;
+	font-weight: 600;
+	font-style: bold;
+	color: red;
+	text-shadow: #000000 1px 1px 10px;
+}
